# server

./: .dockerignore  Caddyfile  Cargo.toml  Containerfile  compose.yaml  deny.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  routes.rs  upstream.rs
supply-chain/: audits.toml  config.toml
tests/: e2e.rs
xtask/: Cargo.toml
xtask/src/: main.rs
