[workspace]
members = ["xtask"]

[package]
name = "kao-proxy"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Privacy-respecting KISS proxy in front of dRPC: RPC passthrough + cross-chain portfolio/history."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
# rustls + webpki roots => no system cert store, no openssl-sys. Uses the ring crypto backend.
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
